# mcp-terminal-server

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: release.yml
src/: __init__.py  main.py
src/core/: executor.py  security.py
src/mcp_terminal_server/: __init__.py  main.py
src/mcp_terminal_server/core/: database.py  executor.py  security.py  session.py
src/mcp_terminal_server/data/: commands.sql  known_commands.json  terminal_history.db
src/mcp_terminal_server/mcp/: handlers.py  server.py
tests/: conftest.py  test_database.py  test_executor.py  test_main.py  test_security.py  test_server.py  test_session.py
tests/integration/: test_full_workflow.py
