[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-terminal-server"
version = "0.1.0b1"
authors = [
  { name="Luiz Assis", email="luizaaca@gmail.com" },
]
description = "A MCP (Model Context Protocol) server for executing terminal commands."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Terminals",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=10.0",
    "pydantic>=2.0.0",
    "mcp[cli]",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/usuario/mcp-terminal-server"
"Bug Tracker" = "https://github.com/usuario/mcp-terminal-server/issues"

[project.scripts]
mcp-terminal-server = "mcp_terminal_server.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
